homework_2,4 fixed.